# cetlib

./: CMakeLists.txt  CMakePresets.json
cetlib/: 2  CMakeLists.txt  LibraryManager.cc  LibraryManager.h  ProvideFilePathMacro.h  bit_manipulation.h  bit_manipulation_cxx20.h  exempt_ptr.h  filepath_maker.cc  get-accessible-paths.cc  hard_cast.h  hypot.h  includer.cc  map_vector.h  registry_via_id.h  search_path.h  split.h  split_path.cc  split_path.h  split_search_path.cc  split_search_path.h  value_ptr.h
cetlib/detail/: cetlib_concepts.h  provide_file_path.cc
cetlib/sqlite/: CMakeLists.txt  Connection.h  ConnectionFactory.h  Ntuple.h  column.h  insert.h  query_result.h  select.h
cetlib/sqlite/detail/: bind_parameters.h
cetlib/test/: CMakeLists.txt  bad_bit_manipulation_t.cc  bad_col_t.cc  bad_copy_all_t.cc  bad_for_all_container_t.cc  bad_for_all_func_t.cc  bad_hard_cast_t.cc  bad_hypot_t.cc  bad_lib_manager_t.cc  bad_pow_t.cc  bad_reg_via_id_t.cc  bad_reg_via_id_t_2.cc  bad_search_path_t.cc  bad_value_ptr_t.cc  bad_value_ptr_t_2.cc  bad_value_ptr_t_3.cc  bit_test.cc  bit_test_cxx20.cc  crc32_test.cc  exempt_ptr_test.cc  filepath_maker_test.cc  getenv_test.cc  hypot_test.cc  inc-expand_test.sh  plugin_search_path_t.cc  regex_t.cc  search_path_test_2.sh  split_search_path_t.cc  value_ptr_test.cc
cetlib/test/sqlite/: CMakeLists.txt  bad_bind_parameter_t.cc  bad_col_t.cc  bad_select_t.cc  connection_t.cc  insert_t.cc  ntuple_t.cc
config/: CMakeLists.txt
doc/dev-notes/: concepts.md  ranges.md
ups/: product_deps
